# lightningmind

./: .gitignore  README.md  eval_llm.py  main.py  pyproject.toml
dataset/: lm_dataset.py
model/: model.py  model_lightningmind.py  model_lora.py
trainer/: train_distillation.py  train_dop.py  train_full_sft.py  train_grpo.py  train_lora.py  train_ppo.py  train_pretrain.py  train_reason.py  train_spo.py  trainer_utils.py
