[project]
name = "lightningmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=3.6.0",
    "datasketch>=1.6.4",
    "Flask>=3.0.3",
    "Flask_Cors>=4.0.0",
    "jieba>=0.42.1",
    "jsonlines>=4.0.0",
    "marshmallow>=3.22.0",
    "matplotlib>=3.10.0",
    "ngrok>=1.4.0",
    "nltk>=3.8",
    "numpy>=2.3.4",
    "openai>=1.59.6",
    "peft>=0.7.1",
    "psutil>=5.9.8",
    "pydantic>=2.11.5",
    "rich>=13.7.1",
    "scikit_learn>=1.5.1",
    "sentence_transformers>=2.3.1",
    "simhash>=2.1.2",
    "tiktoken>=0.10.0",
    "transformers>=4.57.1",
    "jinja2>=3.1.2",
    "trl>=0.13.0",
    "ujson>=5.1.0",
    "wandb>=0.18.3",
    "streamlit>=1.50.0",
    "einops>=0.8.1",
    "swanlab>=0.6.8",
    "torch>=2.9.0",
    "torchvision>=0.21.0"
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }